# minusops

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HANDOFF.md  MANIFEST.in  README.md  SECURITY.md  doctor.ps1  pyproject.toml  requirements.txt
.agents/: AGENTS.md  dashboard_app.py
.agents/skills/architect/: SKILL.md
.agents/skills/architect/agents/: openai.yaml
.agents/skills/grill-me/: SKILL.md
.agents/skills/grill-me/agents/: openai.yaml
.agents/skills/pipeline-optimizer/: SKILL.md
.agents/skills/pipeline-optimizer/scripts/: optimize_analyzer.py
.agents/skills/resolve-ambiguity/: SKILL.md
.agents/skills/resolve-ambiguity/agents/: openai.yaml
.agents/skills/terraform-orchestrator/: SKILL.md
.agents/skills/terraform-orchestrator/scripts/: approval.py  finops_agent.py  intent_dispatcher.py  plan_gate.py
.claude/skills/behavioral-pattern/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  ephemeral-apply.yml  fc-boot-probe-scratch.yml  floci-gauntlet-scratch.yml  kvm-probe-scratch.yml  ministack-gauntlet-scratch.yml  release.yml  schema-watch.yml  trivy-probe-scratch.yml
app/: dashboard_app.py
aws-medallion-pipeline/: budgets.tf  eventbridge.tf  outputs.tf  providers.tf  s3.tf
aws-medallion-pipeline/etl_scripts/: silver_to_gold.py
aws-medallion-pipeline/modules/iam_service_role/: outputs.tf
bootstrap/aws/: governance.tf  outputs.tf  providers.tf  state_backend.tf  variables.tf
core/: MAP.md  __init__.py  accelerators.py  approval.py  architecture_decision.py  architecture_model.py  audit_chain.py  audit_logger.py  authz.py  bcm_pricing_calculator.py  blueprints.py  budget_calculator.py  coverage_audit.py  demo.py  discovery.py  dispatcher.py  finops_agent.py  health_checker.py  intent_resolver.py  minusctl.py  modules.py  optimize_analyzer.py  plan_gate.py  plan_inspector.py  pricing_catalog.py  reporter.py  requirements.py  runs.py  synthesizer.py  terraform_generator.py  tf_validate.py  workflow.py
core/architecture/: __init__.py  architecture_decision.py  architecture_model.py  discovery.py  intent_assertions.py  requirements.py
core/cost/: __init__.py  bcm_pricing_calculator.py  budget_calculator.py  coverage_audit.py  pricing_catalog.py
core/cost/pricing_data/: aws_resource_map.json  free_resources.json
core/generation/: __init__.py  accelerators.py  blueprints.py  demo.py  intent_resolver.py  module_provenance.py  modules.py  patterns.py  schema_lint.py  schema_watch.py  synthesizer.py  terraform_generator.py  workflow.py
core/governance/: __init__.py  approval.py  audit_chain.py  audit_logger.py  authz.py  destructive_change_gate.py  ephemeral_apply.py  plan_gate.py  plan_reader.py  rego_gate.py  source_guard.py  tf_validate.py
core/pricing_data/: aws_resource_map.json
core/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
core/reporting/: __init__.py  dispatcher.py  finops_agent.py  health_checker.py  minusctl.py  optimize_analyzer.py  plan_inspector.py  reporter.py  toolpath.py
docs/: architecture_svg_spec.md  architecture_synthesis.md  audit_chain_lock_fix_scope.md  documentation_ledger.md  enterprise_iam_manifest.md  g2_scope.md  g5_autonomy_boundary_scope.md  g6_iam_extension_scope.md  g6_scope.md  generation_engine_ground_truth_survey.md  information_library.md  operations_runbook.md  phase4_scope.md  phase5_scope.md  phase6_scope.md  phase6_step1_authoring_scope.md  phase6_step5_teardown_scope.md  phase7_generation_engine_plan.md  phase7_item1_module_unit_scope.md  phase7_item5_authoring_scope.md  pricing_catalog_support.md  project_plan.md  security_model.md  walkthrough.md
docs/demo/: minusops-demo.cast  minusops-requirements.cast
examples/: bcm-usage-profile.example.json
examples/iam/: README.md  ci-oidc-trust-policy.json  deploy-role-trust-policy.json  finops-readonly-policy.json
mcp/: README.md  terraform-mcp.json
modules/compaction-glue/: main.tf
modules/compaction-glue/scripts/: compact.py
modules/compute-emr-serverless/: main.tf
modules/compute-glue-etl/: main.tf
modules/compute-glue-etl/scripts/: etl.py
modules/consumption-redshift-serverless/: main.tf
modules/databricks-workspace/: PROVENANCE.json  main.tf
modules/dq-great-expectations/: main.tf
modules/governance-observability/: main.tf
modules/ingest-firehose/: main.tf
modules/networking-vpc/: PROVENANCE.json  main.tf
modules/orchestrator-mwaa/: main.tf
modules/orchestrator-stepfunctions/: main.tf
modules/query-athena/: main.tf
modules/schema-registry-glue/: main.tf
modules/speed-layer-kinesis/: main.tf
modules/storage-medallion-s3/: main.tf
modules/table-format-iceberg/: main.tf
policy/g6/: rules.rego
recent-changes/aws/: 20260724T080303Z.json  schema-snapshot.json
recent-changes/databricks/: 20260724T080305Z.json  schema-snapshot.json
templates/aws/medallion-pipeline/: backend.hcl.example  backend.tf  cost_anomaly.tf  glue.tf  iam.tf  kms.tf  observability.tf  providers.tf  s3.tf  step_functions.tf  variables.tf
templates/aws/medallion-pipeline/etl_scripts/: bronze_to_silver.py
tests/: conftest.py  test_accelerators.py  test_approval.py  test_architecture_decision.py  test_architecture_model.py  test_audit_chain.py  test_authz.py  test_bcm_pricing_calculator.py  test_budget_calculator.py  test_coverage_audit.py  test_credentials.py  test_dashboard.py  test_databricks_workspace_module.py  test_demo.py  test_destructive_change_gate.py  test_discovery.py  test_dispatcher.py  test_dq_great_expectations_module.py  test_ephemeral_apply.py  test_finops_agent.py  test_gate_e2e.py  test_intent_assertions.py  test_intent_resolver.py  test_minusctl.py  test_module_provenance.py  test_modules.py  test_networking_vpc_module.py  test_optimize_analyzer.py  test_patterns.py  test_plan_gate.py  test_plan_inspector.py  test_plan_reader.py  test_pricing_catalog.py  test_providers.py  test_query_athena_module.py  test_rego_gate.py  test_reporter.py  test_requirements.py  test_runs.py  test_schema_lint.py  (+7 more)
tools/: doctor.ps1
(+2 files in other folders)
