[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minusops"
version = "0.1.0"
description = "MinusOps — a governed, multi-cloud Terraform control plane (plan-bound, MFA-gated, audited deploys)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "MinusOps" }]
keywords = ["terraform", "governance", "finops", "devops", "iac", "aws"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
]

# Core CLIs (gate, approval, audit, scanner, intent) use only the standard library
# plus your cloud CLI. The dependencies below are for the optional FinOps dashboard.
dependencies = [
    "dash>=2.14,<3",
    "plotly>=5.18,<6",
]

[project.optional-dependencies]
dashboard = [
    "dash>=2.14,<3",
    "plotly>=5.18,<6",
]
policy = [
    "checkov>=3,<4",
]
dev = [
    "pytest>=8.0,<9",
    "build>=1.2",
    "cyclonedx-bom>=4.0",
]

[project.scripts]
# Pip-installable console commands — clients run `minusctl ...`, not `python core/x.py ...`.
minusctl = "core.reporting.minusctl:main"
minus-gate = "core.governance.plan_gate:main"
minus-resolve = "core.generation.intent_resolver:main"
minus-workflow = "core.generation.workflow:main"
minus-bcm = "core.cost.bcm_pricing_calculator:main"
minus-runs = "core.reporting.runs:main"
minus-demo = "core.generation.demo:main"
minus-accelerator = "core.generation.accelerators:main"
minus-update-module = "core.generation.module_provenance:main"
minus-schema-watch = "core.generation.schema_watch:main"

[project.urls]
Documentation = "https://github.com/your-org/minusops/blob/main/AGENTS.md"

[tool.setuptools]
# Python code ships as the `core` package (+ provider subpackage). Runtime Terraform
# modules, required docs, examples, and local agent skill manifests are shipped below
# as data-files so installed wheels work without a source checkout.
packages = [
    "core", "core.providers",
    "core.generation", "core.architecture", "core.governance", "core.cost", "core.reporting",
]

[tool.setuptools.package-data]
core = ["py.typed"]
# pricing_data lives inside the core.cost package (not a sibling dir like modules/docs/examples
# below), so it belongs here, not in [tool.setuptools.data-files] -- it was omitted from both,
# which is why a real wheel install never had it (core/cost/pricing_data/*.json missing ->
# pricing_catalog.resolve_resource_type() crashed with FileNotFoundError on first use).
"core.cost" = ["pricing_data/*.json"]

[tool.setuptools.data-files]
# NOTE: this list is hand-maintained and does not auto-discover new modules/<id> dirs -- it's
# exactly how 5 of 14 modules went missing from the wheel before (added to modules/ but never
# added here). When adding a new module, add its data-files entry here too, and check
# `python -m build --wheel` actually contains it before considering the module done.
"modules/storage-medallion-s3" = ["modules/storage-medallion-s3/main.tf"]
"modules/orchestrator-mwaa" = ["modules/orchestrator-mwaa/main.tf"]
"modules/orchestrator-stepfunctions" = ["modules/orchestrator-stepfunctions/main.tf"]
"modules/compute-glue-etl" = ["modules/compute-glue-etl/main.tf"]
"modules/compute-glue-etl/scripts" = ["modules/compute-glue-etl/scripts/etl.py"]
"modules/compute-emr-serverless" = ["modules/compute-emr-serverless/main.tf"]
"modules/speed-layer-kinesis" = ["modules/speed-layer-kinesis/main.tf"]
"modules/ingest-firehose" = ["modules/ingest-firehose/main.tf"]
"modules/dq-great-expectations" = ["modules/dq-great-expectations/main.tf"]
"modules/schema-registry-glue" = ["modules/schema-registry-glue/main.tf"]
"modules/query-athena" = ["modules/query-athena/main.tf"]
"modules/consumption-redshift-serverless" = ["modules/consumption-redshift-serverless/main.tf"]
"modules/table-format-iceberg" = ["modules/table-format-iceberg/main.tf"]
"modules/compaction-glue" = ["modules/compaction-glue/main.tf"]
"modules/compaction-glue/scripts" = ["modules/compaction-glue/scripts/compact.py"]
"modules/governance-observability" = ["modules/governance-observability/main.tf"]
"modules/databricks-workspace" = ["modules/databricks-workspace/main.tf"]
"modules/networking-vpc" = ["modules/networking-vpc/main.tf"]
"docs" = [
    "docs/architecture_synthesis.md",
    "docs/architecture_svg_skeleton.svg",
    "docs/architecture_svg_spec.md",
    "docs/documentation_ledger.md",
    "docs/enterprise_iam_manifest.md",
    "docs/information_library.md",
    "docs/operations_runbook.md",
    "docs/pricing_catalog_support.md",
    "docs/security_model.md",
]
"examples/bcm" = ["examples/bcm-usage-profile.example.json"]
"examples/iam" = [
    "examples/iam/README.md",
    "examples/iam/ci-oidc-trust-policy.json",
    "examples/iam/deploy-role-trust-policy.json",
    "examples/iam/finops-readonly-policy.json",
]
".agents" = [".agents/AGENTS.md"]
".agents/skills/architect" = [".agents/skills/architect/SKILL.md"]
".agents/skills/architect/agents" = [".agents/skills/architect/agents/openai.yaml"]
".agents/skills/grill-me" = [".agents/skills/grill-me/SKILL.md"]
".agents/skills/grill-me/agents" = [".agents/skills/grill-me/agents/openai.yaml"]
".agents/skills/pipeline-optimizer" = [".agents/skills/pipeline-optimizer/SKILL.md"]
".agents/skills/resolve-ambiguity" = [".agents/skills/resolve-ambiguity/SKILL.md"]
".agents/skills/resolve-ambiguity/agents" = [".agents/skills/resolve-ambiguity/agents/openai.yaml"]
".agents/skills/terraform-orchestrator" = [".agents/skills/terraform-orchestrator/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
